fixed deadline form color handling in dark mode

--- a/src/app/DeadlineForm.module.css
+++ b/src/app/DeadlineForm.module.css
@@ -11,6 +11,10 @@
   margin-left: -200px;
 }
 
+#deadlineForm h1 {
+  color: black;
+}
+
 @media only screen and (max-height: 600px) {
   #deadlineForm {
     height: 100%;
@@ -41,6 +45,10 @@
 
 .field * {
   width: 100%;
+}
+
+.field label {
+  color: black;
 }
 
 .field input {
